update homepage by implemeting animations & hover effects

--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
     </header>
 
     <main class="main">
-
-        <div class="container">
+        <div class="container intro-container">
             <div class="row intro">
-                <div class="col-lg-4 order-2 order-lg-1">
+                <div class="col-lg-4 col-xl-5 order-2 order-lg-1">
                     <div class="description-column">
                         <h1 class="description-title">
                             Rent Authentic Sneakers
@@ -76,10 +75,13 @@
                         <a href="#" class="infinite-button mx-auto mx-lg-0">Rent Now</a>
                     </div>
                 </div>
-                <div class="col-lg-8 order-1 order-lg-2 intro-image-container">
-                    <img class="intro-image" src="images/intro/intro-optimized.gif" alt="">
+                <div class="col-lg-8 col-xl-7 order-1 order-lg-2 animate-container">
+                    <img class="animate leftSneaker" src="images/intro/leftSneaker.png" alt="">
+                    <img class="animate rightSneaker" src="images/intro/rightSneaker.png" alt="">
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row releases">
                 <div class="col-12 releases-line d-flex justify-content-between">
                     <h3 class="infinite-header">
@@ -89,40 +91,52 @@
                 </div>
                 <div class="col-12 releases-container">
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-1.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-1.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-2.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-2.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-3.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-3.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-4.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-4.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-5.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-5.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                     <div class="releases-item">
-                        <img class="releases-image" src="images/releases/releases-6.jpg" alt="sneakers">
-                        <p class="releases-title">Adidas Yeezy 500</p>
-                        <p class="releases-value">$330 Value</p>
-                        <p class="releases-cost">$130</p>
+                        <a href="#" class="releases-item-link">
+                            <img class="releases-image" src="images/releases/releases-6.jpg" alt="sneakers">
+                            <p class="releases-title">Adidas Yeezy 500</p>
+                            <p class="releases-value">$330 Value</p>
+                            <p class="releases-cost">$130</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -169,7 +183,7 @@
                             <h4 class="infinite-header-small mb-3">1. Choose your way to rent</h4>
                             <p class="infinite-text text-grey">
                                 We offer one-time and unlimited rentals. Our rentals last
-                                either 4 or 8 days. Book rentals days or months in advance 
+                                either 4 or 8 days. Book rentals days or months in advance
                                 to suit all your sneaker needs.
                             </p>
                         </div>
@@ -365,8 +379,8 @@
                 </div>
             </div>
         </div>
-
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
