--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <nav class="navbar navbar-expand-lg">
                         <a class="basket-icon d-flex d-lg-none" href="#"></a>
                         <a class="navbar-brand brand-logo" href="#"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
