--- a/index.html
+++ b/index.html
@@ -18,46 +18,42 @@
 <body>
 
 
-    <header class="header fixed-top">
-        <div class="container ">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="navbar navbar-expand-lg">
-                        <a class="basket-icon d-flex d-lg-none" href="#"></a>
-                        <a class="navbar-brand brand-logo" href="#"></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon" id="mobileMenu"></span>
-                        </button>
+    <header class="header" id="topPage">
+        <div class="fixed-top bg-white">
+            <nav class="navbar navbar-expand-lg  container">
+                <a class="basket-icon d-flex d-lg-none" href="#"></a>
+                <a class="navbar-brand brand-logo" href="#topPage"></a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" id="mobileMenu"></span>
+                </button>
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav d-flex juctify-content-between">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="#">Browse Sneakers</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">How We Clean</a>
-                                </li>
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="#">Ways to Rent</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Authenticity Guarantee</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="authorization-layout d-none d-lg-flex">
-                            <a class="nav-text" href="#">Login</a>
-                            <div class="searchbar">
-                                <input class="search_input" type="text" name="" placeholder="Search...">
-                                <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
-                            </div>
-                            <a class="basket-icon" href="#"></a>
-                        </div>
-                    </nav>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav d-flex juctify-content-between">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="browse-sneakers.html">Browse Sneakers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="how-we-clean.html">How We Clean</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="ways-to-rent.html">Ways to Rent</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="authenticity-guarantee.html">Authenticity Guarantee</a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
+                <div class="authorization-layout d-none d-lg-flex">
+                    <a class="nav-text" href="#">Login</a>
+                    <div class="searchbar">
+                        <input class="search_input" type="text" name="" placeholder="Search...">
+                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                    </div>
+                    <a class="basket-icon" href="#"></a>
+                </div>
+            </nav>
         </div>
     </header>
 
@@ -87,7 +83,7 @@
                     <h3 class="infinite-header">
                         New Releases
                     </h3>
-                    <a class="infinite-link-dark" href="#">View All</a>
+                    <a class="infinite-link-dark" href="browse-sneakers.html">View All</a>
                 </div>
                 <div class="col-12 releases-container">
                     <div class="releases-item">
@@ -142,11 +138,11 @@
             </div>
         </div>
 
-        <section class="authenticity">
+        <section class="homepage-authenticity">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-xl-9 mx-auto authenticity-text-container">
-                        <h2 class="authenticity-text">
+                    <div class="col-12 col-xl-9 mx-auto homepage-authenticity-text-container">
+                        <h2 class="homepage-authenticity-text">
                             We Feel You, No One Should Ever Spend Money On Fake Sneakers.
                             Or Have To Spend Hundreds To Rock The Real Ones.
                         </h2>
@@ -349,27 +345,27 @@
         <div class="container">
             <div class="row footer-container">
                 <div class="col-12 col-lg footer-logo-container">
-                    <a class="footer-logo-link" href="#">
+                    <a class="footer-logo-link" href="#topPage">
                         <img class="footer-logo" src="images/logo/logo-white.svg" alt="Infinite Selection">
                     </a>
                 </div>
-                <div class="col-12 col-lg-5 my-3 footer-menu">
+                <div class="col-12 col-lg-5 footer-menu">
                     <nav class="footer-nav">
                         <a class="footer-link" href="#">Contact Us</a>
-                        <a class="footer-link" href="#">Terms of Services</a>
-                        <a class="footer-link" href="#">Privacy Policy</a>
+                        <a class="footer-link" href="terms-of-service.html">Terms of Services</a>
+                        <a class="footer-link" href="privacy-policy.html">Privacy Policy</a>
                         <a class="footer-link" href="#">FAQ</a>
                     </nav>
                 </div>
                 <div class="col-12 col-lg footer-socials">
                     <div class="socials-container">
-                        <a class="social-link facebook-link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social-link facebook-link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="social-link instagram-link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social-link instagram-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="social-link twitter-link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social-link twitter-link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
