update homepage and some css; make rent-page functional;

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     </ul>
                 </div>
                 <div class="authorization-layout d-none d-lg-flex">
-                    <a class="nav-text" href="#">Login</a>
+                    <a class="nav-text" href="login.html">Login</a>
                     <div class="searchbar">
                         <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <a href="browse-sneakers.html" class="search_icon"><i class="fas fa-search"></i></a>
                     </div>
                     <a class="basket-icon" href="#"></a>
                 </div>
@@ -68,7 +68,7 @@
                         <p class="description-text">
                             Rent Collectable Sneakers From Top Brands Like Nike, Air Jordan, Adidas and More
                         </p>
-                        <a href="#" class="infinite-button mx-auto mx-lg-0">Rent Now</a>
+                        <a href="browse-sneakers.html" class="infinite-button mx-auto mx-lg-0">Rent Now</a>
                     </div>
                 </div>
                 <div class="col-lg-8 col-xl-7 order-1 order-lg-2 animate-container">
@@ -87,51 +87,51 @@
                 </div>
                 <div class="col-12 releases-container">
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-1.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-2.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-3.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                     <div class="releases-item">
                         <a href="#" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-4.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-5.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                     <div class="releases-item">
-                        <a href="#" class="releases-item-link">
+                        <a href="example.html" class="releases-item-link">
                             <img class="releases-image" src="images/releases/releases-6.jpg" alt="sneakers">
                             <p class="releases-title">Adidas Yeezy 500</p>
-                            <p class="releases-value">$330 Value</p>
-                            <p class="releases-cost">$130</p>
+                            <p class="releases-value">&#36;330 Value</p>
+                            <p class="releases-cost">&#36;130</p>
                         </a>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                             We Feel You, No One Should Ever Spend Money On Fake Sneakers.
                             Or Have To Spend Hundreds To Rock The Real Ones.
                         </h2>
-                        <a href="#" class="button-white infinite-button">Authenticity Guarantee</a>
+                        <a href="authenticity-guarantee.html" class="button-white infinite-button">Authenticity Guarantee</a>
                     </div>
                 </div>
             </div>
@@ -157,14 +157,14 @@
                 How we clean
             </h2>
             <img class="clean-image" src="images/homepage-section/section-clean.jpg" alt="How we clean">
-            <a href="#" class="infinite-link mx-auto mx-lg-0">Learn More</a>
+            <a href="how-we-clean.html" class="infinite-link mx-auto mx-lg-0">Learn More</a>
         </section>
 
         <section class="action">
-            <h2 class="action-text">
+            <h2 class="action-text infinite-title">
                 Same Sneakers, Better Prices
             </h2>
-            <a href="#" class="infinite-button action-link">Rent Now</a>
+            <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
             <img class="action-image" src="images/homepage-section/section-action.png" alt="How we clean">
         </section>
 
@@ -229,8 +229,8 @@
                                 </ul>
                             </div>
                             <div class="advantages-item-action">
-                                <a href="#" class="infinite-button advantages-button">Rent Now</a>
-                                <a href="#" class="infinite-link">Learn More</a>
+                                <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
+                                <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
                             </div>
 
                         </div>
@@ -253,8 +253,8 @@
                                 </ul>
                             </div>
                             <div class="advantages-item-action">
-                                <a href="#" class="infinite-button advantages-button">Rent Now</a>
-                                <a href="#" class="infinite-link">Learn More</a>
+                                <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
+                                <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
                             </div>
 
                         </div>
@@ -334,7 +334,7 @@
             <h2 class="infinite-title action-2-text">
                 Become the Sneakerhead You've Always Dreamed of
             </h2>
-            <a href="#" class="infinite-button action-2-link">Rent Now</a>
+            <a href="browse-sneakers.html" class="infinite-button action-2-link">Rent Now</a>
             <img class="action-2-image" src="images/homepage-section/section-action-2.png" alt="Lucky You Are!">
         </section>
 
